<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/btms_edit_review_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_20">

    <View
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_drag_handle" />

    <Button
        android:id="@+id/btn_edit_btms_edit_review"
        style="@style/TitleFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/btn_bottom_sheet"
        android:elevation="5dp"
        android:text="@string/edit_review"
        android:textAllCaps="false"
        android:textSize="@dimen/text_16" />

    <Button
        android:id="@+id/btn_delete_btms_edit_review"
        style="@style/TitleFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_20"
        android:background="@drawable/btn_bottom_sheet"
        android:elevation="5dp"
        android:text="@string/delete_review"
        android:textAllCaps="false"
        android:textSize="@dimen/text_16" />

</LinearLayout>
