<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_add_review"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_5"
    android:paddingVertical="@dimen/padding_20">

    <TextView
        style="@style/TitleFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_a_review"
        android:textColor="@color/title_text"
        android:textSize="@dimen/text_18" />

    <RatingBar
        android:id="@+id/rating_bar_add_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_10"
        android:numStars="5"
        android:progressTint="@color/star"
        android:rating="5"
        android:stepSize="1" />


    <EditText
        android:id="@+id/dialog_text_add_review"
        style="@style/TextFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_10"
        android:background="@drawable/input_text_field"
        android:gravity="top|start"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:minLines="6"
        android:padding="@dimen/padding_10"
        android:textSize="@dimen/text_16"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_40"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_add_review"
            style="@style/TitleFont"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_10"
            android:background="@drawable/btn_orange_alt"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/button_orange"
            android:textSize="@dimen/text_18" />

        <Button
            android:id="@+id/btn_submit_add_review"
            style="@style/TitleFont"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_10"
            android:background="@drawable/btn_orange"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_18" />

    </LinearLayout>

</LinearLayout>
