...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".views.restaurant_detail.RestaurantDetailActivity">

    <FrameLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20" />

        <LinearLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_20"
            android:orientation="horizontal">

...
                android:layout_marginEnd="@dimen/margin_10"
                android:background="@drawable/btn_icon_round"
                android:contentDescription="@string/round_btn"
                android:src="@drawable/ic_search" />

            <ImageButton
                android:id="@+id/btn_plus"
                android:layout_width="@dimen/round_btn_size"
                android:layout_height="@dimen/round_btn_size"
                android:background="@drawable/btn_icon_round"
                android:contentDescription="@string/round_btn"
                android:src="@drawable/ic_plus" />

...
